<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.cdu.ua.maksymsavienkov.mobile_activity_introduction_lab_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.cdu.ua.maksymsavienkov.mobile_activity_introduction_lab_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.cdu.ua.maksymsavienkov.mobile_activity_introduction_lab_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_new_fragment"
        android:name="edu.cdu.ua.maksymsavienkov.mobile_activity_introduction_lab_app.ui.newFragment.NewFragment"
        android:label="@string/new_fragment"
        tools:layout="@layout/new_fragment" />

    <activity
        android:id="@+id/nav_tabbed_activity"
        android:name="edu.cdu.ua.maksymsavienkov.mobile_activity_introduction_lab_app.TabbedActivity"
        android:label="@string/tabbed_activity"
        tools:layout="@layout/activity_tabbed" />
</navigation>